--- a/product.html
+++ b/product.html
@@ -57,7 +57,7 @@
         <p><strong>Condition:</strong> New</p>
         <p><strong>Color:</strong> Black</p>
         <p><strong>Location:</strong> Link of the store location</p>
-      <a href="store.html"> <p><strong>Store:</strong><span class="green" >New Store</span> </p> </a> 
+      <a href="store.html"> <p><strong class="store" >Store:</strong><span class="green" >New Store</span> </p> </a> 
     </div>
     </div>
     
