adding navbar in store page

--- a/store.html
+++ b/store.html
@@ -4,8 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Store Page </title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
-  
+  <nav class="navbar">
+    <div class="navbar-brand">
+      <a href="index.html"> <span class="brand-name"><span class="brand-highlight">E</span>bozar</span></a> 
+    </div>
+    <div class="search-bar">
+        <button class="search-button">
+            <i class="fas fa-search"></i>
+        </button>
+        <input type="text" placeholder="Search pasal or saman" class="search-input">
+    </div>
+    <div class="navbar-menu" id="navbar-menu">
+        <a href="#" class="navbar-link"><i class="fas fa-shopping-cart"></i> Cart</a>
+        <a href="#" class="navbar-link"><i class="fas fa-store"></i> Become Seller</a>
+        <a href="#" class="navbar-link"><i class="fas fa-user"></i> Login</a>
+        <button class="location-button">Biratnagar</button>
+    </div>
+    <button class="hamburger" id="hamburger">
+        <i class="fas fa-bars"></i>
+    </button>
+</nav>
 </body>
 </html>
