--- a/store.html
+++ b/store.html
@@ -28,5 +28,23 @@
         <i class="fas fa-bars"></i>
     </button>
 </nav>
+
+
+<section>
+
+<div class="Store-details">
+  <h3>Store</h3>
+  <div class="mainstore">
+    <div class="store-details-left">hello</div>
+    <div class="product-card">byyy</div>
+  </div>
+</div>
+
+
+
+
+</section>
+
+
 </body>
 </html>
